--- a/projectv6.html
+++ b/projectv6.html
@@ -204,7 +204,7 @@ tr:hover {
             <div class="checkbox-container">
                 <strong>Toggle Layers:</strong><br>
                 
-                <input type="checkbox" id="exportedReachCheckbox" checked> <label for="exportedReachCheckbox">ExportedReach Layer</label><br>
+                <input type="checkbox" id="exportedReachCheckbox" checked> <label for="exportedReachCheckbox">Reach Layer</label><br>
                 
                 <input type="checkbox" id="dukeProgreeStationPointCheckbox" checked> <label for="dukeProgreeStationPointCheckbox">Duke Progress Station Point Layer</label><br>
             </div>
