--- a/projectv7.html
+++ b/projectv7.html
@@ -194,9 +194,15 @@ tr:hover {
             <h4>Problem Statement</h4>
             <p>Duke Energy is expanding their area and recently, established a new Duke Progress Station in Kingstree,South Carolina. Their main target is to generate electricity from hydropower. There are several reaches that can contribute to the electricity generation. Three reaches from the list below are contributing mainly for the power generation, which are 9090136, 9090262, and 9090922.</p>
             <h4>Data Used, Warnings, and How to use this Webpage</h4>
-            <p>Data Used: The watershed here has been extracted from StreamsStats, the Duke Progress Station Location has been found from Google Map, and the Reaches have been extracted from NWM API and ArcGIS Pro.</p>
-          <p>Data Representation: The watershed/polygon boundary in grey represents the boundary around the Duke Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
-
+            <p><b>Data Used:</b> The watershed here has been extracted from StreamsStats, the Duke Progress Station Location has been found from Google Map, and the Reaches have been extracted from NWM API and ArcGIS Pro.</p>
+          <p><b>Data Representation:</b> The watershed/polygon boundary in grey represents the boundary around the Duke Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
+<p>How to Use This Webpage: You can see the Location of the Area around the Duke Power Station in the Interactive Map. You can also see the streams contributing to the station, and the location of it.
+There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from the Toggle layer you will not see layers. For example, if you uncheck the "Reach Layer" you will not see the reach layer. </p>
+	<p>Under the Toggle Layer, you will see the Reach ID, which are all the streams contributing to the electricity generation. If you click on any Reach ID, you see the reach on the map (if the Reach Layer is unchecked).Also, you will be able to see the table and the chart for the Reach you selected. Moreover, you can also select the Forecast Range.</p>
+	<p><b>Short Range:</b>18 hours</p>	
+        <p><b>Medium Range:</b>8-10 days</p>
+	<p><b>Long Range:</b>30 days</p>
+		
             <!-- Map Section -->
             <h4>Interactive Web Map</h4>
             <div id="map"></div>
