--- a/projectv7.html
+++ b/projectv7.html
@@ -198,11 +198,16 @@ tr:hover {
           <p><b>Data Representation:</b> The watershed/polygon boundary in grey represents the boundary around the Duke Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
 <p><b>How to Use This Webpage:</b> You can see the Location of the Area around the Duke Power Station in the Interactive Map. You can also see the streams contributing to the station, and the location of it.
 There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from the Toggle layer you will not see layers. For example, if you uncheck the "Reach Layer" you will not see the reach layer. </p>
-	<p>Under the Toggle Layer, you will see the Reach ID, which are all the streams contributing to the electricity generation. If you click on any Reach ID, you see the reach on the map (if the Reach Layer is unchecked).Also, you will be able to see the table and the chart for the Reach you selected. Moreover, you can also select the Forecast Range.</p>
+	<p>Under the Toggle Layer, you will see the Reach ID, which are all the streams contributing to the electricity generation. If you click on any Reach ID, you see the reach on the map (if the Reach Layer is unchecked).Also, you will be able to see the table and the chart for the Reach you selected. Moreover, you can also select the Forecast Range from the Drop Down.</p>
 	<p><b>Short Range:</b>18 hours</p>	
         <p><b>Medium Range:</b>8-10 days</p>
 	<p><b>Long Range:</b>30 days</p>
+	<p>The chart for each of the Forecast has a Streamflow Forecast line from National Water Model and a Threshold line. The threshold line represents if the streamflow exceeds the threshold line, that portion is mainly contributing for the electricity generation. The portion where it does not exceed the threshold, that portion does not contribute for the exlectricity generation.</p>
 	<p>The Forecast that is fetching for the reaches are from the National Water Model API. <a href="https://water.noaa.gov/" target="_blank">Click to know more.</a></p>	
+        <p><b>Warning:</b>This webpage is created for CE - 514 class purpose. Hence, all the results may not be legitimate. </p>
+<h4>More About the Webpage</h4>
+		
+		
             <!-- Map Section -->
             <h4>Interactive Web Map</h4>
             <div id="map"></div>
