--- a/projectnwm.html
+++ b/projectnwm.html
@@ -24,7 +24,7 @@
             border: 3px solid white;
         }
         .left-panel {
-            background: url('hydropower1.jpg') no-repeat center center/cover;
+            background: url('new.jpg') no-repeat center center/cover;
             padding: 20px;
             border-radius: 10px;
             color: white;
@@ -160,7 +160,7 @@ tr:hover {
                 <li>Graduate Student at BYU</li>
                 <li>Interested in Hydrology and Hydroinformatics</li>
                 <li>Learning Python</li>
-				<li>Want to know More About Me:<a href="CE514.html" target="_blank"> Tasfia's CE-514 Index.</li>. 
+				<li>Want to know More About Me:<a href="CE514.html" target="_blank"> Tasfia's CE-514 Index.</a></li>. 
             </ul>
 
             <!-- Contact Information -->
