--- a/projectnwm.html
+++ b/projectnwm.html
@@ -24,7 +24,7 @@
             border: 3px solid white;
         }
         .left-panel {
-            background: url('new.jpg') no-repeat center center/cover;
+            background: url('new2.jpg') no-repeat center center/cover;
             padding: 20px;
             border-radius: 10px;
             color: white;
