--- a/projectnwm.html
+++ b/projectnwm.html
@@ -254,7 +254,10 @@ There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from
   <option value="long_range">Long Range</option>
 </select>
 
-
+<!-- Note under the dropdown -->
+<p style="color: #ffcc00; font-size: 14px; margin-top: 5px;">
+  <b>Note:</b> If you Don't see any Forecast in the Table or Chart, Don't Worry! Sometimes NWM API can not fetch Forecast.
+</p>
 
 <!-- Timeseries Data Table -->
 <table id="timeseries-datatable" style="display: none">
