--- a/projectnwmv2.html
+++ b/projectnwmv2.html
@@ -256,7 +256,7 @@ There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from
 
 <!-- Note under the dropdown -->
 <p style="color: #ffcc00; font-size: 14px; margin-top: 5px;">
-  <b>Note:</b> If you Don't see any Forecast in the Table or Chart, Don't Worry! Sometimes NWM API can not fetch Forecast.
+  <b>Note:</b> If you Don't see any Forecast in the Table or Chart, Don't Worry! Sometimes NWM API can not fetch Forecast. You can also try to double click sometimes and wait a bit.
 </p>
 
 <!-- Streamflow Chart -->
