--- a/projectnwmv2.html
+++ b/projectnwmv2.html
@@ -203,7 +203,7 @@ tr:hover {
           <p><b>Data Representation:</b></p>
 		  <p>The watershed/polygon boundary in grey represents the boundary around the Duke Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
 <p><b>How to Use This Webpage:</b></p>
-<p> You can see the Location of the Area around the Duke Power Station in the Interactive Map. You can also see the streams contributing to the station, and the location of it.
+<p> You can see the Location of the Area around the Duke Energy Progress Station in the Interactive Map. You can also see the streams contributing to the station, and the location of it.
 There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from the Toggle layer you will not see layers. For example, if you uncheck the "Reach Layer" you will not see the reach layer. </p>
 	<p>Under the Toggle Layer, you will see the Reach ID, which are all the streams contributing to the electricity generation. If you click on any Reach ID, you see the reach on the map (if the Reach Layer is unchecked).Also, you will be able to see the table and the chart for the Reach you selected. Moreover, you can also select the Forecast Range from the Drop Down.</p>
 	<p><span class="neon">Short Range:</span> 18 hours</p>
