--- a/projectnwmv2.html
+++ b/projectnwmv2.html
@@ -196,12 +196,12 @@ tr:hover {
         <h3>6. Hydropower Expansion and Planning</h3>
         <p>Historical and predicted water availability trends from the NWM support feasibility studies for new hydropower projects.</p>
             <h4>Problem Statement</h4>
-            <p>Duke Energy is expanding their area and recently, established a new Duke Progress Station in Kingstree,South Carolina. Their main target is to generate electricity from hydropower. There are several reaches that can contribute to the electricity generation. Three reaches from the list below are contributing mainly for the power generation, which are 9090136, 9090262, and 9090922.</p>
+            <p>Duke Energy is expanding their area and recently, established a new Duke Energy Progress Station in Kingstree,South Carolina. Their main target is to generate electricity from hydropower. There are several reaches that can contribute to the electricity generation. Three reaches from the list below are contributing mainly for the power generation, which are 9090136, 9090262, and 9090922.</p>
             <h4>Data Used, Warnings, and How to use this Webpage</h4>
             <p><b>Data Used:</b></p>
-			<p>The watershed here has been extracted from StreamsStats, the Duke Progress Station Location has been found from Google Map, and the Reaches have been extracted from NWM API and ArcGIS Pro.</p>
+			<p>The watershed here has been extracted from StreamsStats, the Duke Energy Progress Station Location has been found from Google Map, and the Reaches have been extracted from NWM API and ArcGIS Pro.</p>
           <p><b>Data Representation:</b></p>
-		  <p>The watershed/polygon boundary in grey represents the boundary around the Duke Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
+		  <p>The watershed/polygon boundary in grey represents the boundary around the Duke Energy Progress Station surrounding the reaches, which can be used for the used for the hydropower electricity generation. The blue line are representating the streams that is contributing to the electricity generation, and the red point is the location of the Duke Progress Station.</p>
 <p><b>How to Use This Webpage:</b></p>
 <p> You can see the Location of the Area around the Duke Energy Progress Station in the Interactive Map. You can also see the streams contributing to the station, and the location of it.
 There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from the Toggle layer you will not see layers. For example, if you uncheck the "Reach Layer" you will not see the reach layer. </p>
@@ -209,7 +209,7 @@ There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from
 	<p><span class="neon">Short Range:</span> 18 hours</p>
     <p><span class="neon">Medium Range:</span> 8-10 days</p>
     <p><span class="neon">Long Range:</span> 30 days</p>
-	<p>The chart for each of the Forecast has a Streamflow Forecast line from National Water Model and a Threshold line. The threshold line represents if the streamflow exceeds the threshold line, that portion is mainly contributing for the electricity generation. The portion where it does not exceed the threshold, that portion does not contribute for the exlectricity generation.</p>
+	<p>The chart for each of the Forecast has a Streamflow Forecast line from National Water Model and a Threshold line. The threshold line represents if the streamflow exceeds the threshold line, that portion is mainly contributing for the electricity generation. The portion where it does not exceed the threshold, that portion does not contribute for the electricity generation.</p>
 	<p>The Forecast that is fetching for the reaches are from the National Water Model API. <a href="https://water.noaa.gov/" target="_blank">Click to know more.</a></p>	
         <p><b>Warning:</b></p>
 		<p>This webpage is created for CE - 514 class purpose. Hence, all the results may not be legitimate. </p>
