--- a/projectnwmv2.html
+++ b/projectnwmv2.html
@@ -215,7 +215,7 @@ There is a Toggle Layer under the Interactive Map. If you uncheck the boxes from
 		<p>This webpage is created for CE - 514 class purpose. Hence, all the results may not be legitimate. </p>
 <h4>More About the Webpage</h4>
 		<p>If you want to know more about the Web Page, How I build the Page, and the Documentation, then click <a href="documentationforprojectv7.html" target="_blank">Web Page Documentation.</a></p>
-		<p>Also, if you want to know about the source code, Click <a href="codeforpriojectv7.html" target="_blank">Source Code.</a></p>
+		<p>Also, if you want to know about the source code, Click <a href="codenwm.html" target="_blank">Source Code.</a></p>
 		
             <!-- Map Section -->
             <h4>Interactive Web Map</h4>
