--- a/CE514.html
+++ b/CE514.html
@@ -29,6 +29,7 @@
         <a href="leafletkmlupdate.html" target="_blank">A6 - Use KML in Leaflet-Updated</a>
         <a href="hydroshare.html" target="_blank">A7 - A Web Map for Viewing HydroShare Data</a>
         <a href="nwmapi.html" target="_blank">A8 - Retrieve and Plot Data from the US National Water Model</a>
+        <a href="projectnwmv2.html" target="_blank">A9 - Build a NWM Forecast Application</a>
     </div>
 </body>
 </html>
